[package]
name = "fossmeet-26"
version = "0.1.0"
edition = "2021"
authors = ["FOSSCell NIT Calicut"]
description = "FOSSMeet'26 - Annual gathering on Free and Open Source Software"
repository = "https://github.com/fosscell/fossmeet-26"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "console",
    "Storage",
    "Location",
    "History",
    "ScrollBehavior",
    "ScrollToOptions",
    "DomRect",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "MouseEvent",
    "KeyboardEvent",
    "AnimationEvent",
    "TransitionEvent",
] }
js-sys = "0.3"
gloo = { version = "0.11", features = ["futures", "timers", "console", "storage", "events"] }
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
log = "0.4"
wasm-logger = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-opt = false

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'
codegen-units = 1

[profile.dev]
opt-level = 1
